# internal/dto/finance.go
@@ -86,7 +86,7 @@ type TaxiParkDriversResponse struct {
 
 type TaxiParkOrderResponse struct {
 	ID          uuid.UUID          `json:"id" example:"55555555-5555-5555-5555-555555555555"`
-	DriverID    uuid.UUID          `json:"driver_id" example:"22222222-2222-2222-2222-222222222222"`
+	DriverID    *uuid.UUID         `json:"driver_id,omitempty" example:"22222222-2222-2222-2222-222222222222"`
 	Status      domain.OrderStatus `json:"status" example:"completed"`
 	GrossAmount MoneyCentsResponse `json:"gross_amount"`
 	CreatedAt   time.Time          `json:"created_at" example:"2026-05-12T12:00:00Z"`
